fix: push the home landing page contaier up by 1rem to remove the white space

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -31,6 +31,7 @@
   color: whitesmoke;
   z-index: 10;
   font-family: 'Montserrat', sans-serif;
+  margin-top: -1rem;
 }
 
 
@@ -143,6 +144,11 @@ dl, ol, ul {
 
 .nav ul li a {
   text-decoration: none;
+}
+
+
+.nav {
+  height: 40px;
 }
 
 
